--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -22,8 +22,7 @@
                 <i class="fas fa-palette me-2"></i>Color Palette Generator
             </a>
             <div class="d-flex align-items-center">
-                <button class="btn btn-sm btn-outline-primary">About</button>
-                <button class="btn btn-sm btn-outline-secondary ms-2">Help</button>
+                <a href="{{url_for('main.registration')}}" class="btn btn-sm btn-outline-primary">API Docs</a>
             </div>
         </div>
     </nav>
